# grassland-uwue-mechanism-screen

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: autonomous_cli.yaml  demo.yaml  production_template.yaml
docs/: CLI_ONLY_AUTONOMOUS_WORKFLOW.md  data_contract.md  runbook.md
mentor_release/: README_FOR_REZA.md
release/: README_FOR_project.md
scripts/: PATCH_PHASE18_TAIL.py  QUEUE_phase6_after_phase5.sh  audit_n112_complete_case.py  audit_n112_filtering_and_signal.py  audit_reza_feedback_requirements.py  check_thesis_feasibility_no_tower.py  export_final_supplemental_checks_gee.py  final_download_full_gee_2001_2024.sh  final_no_gee_robustness_and_claim_lock.py  gee_tower_export_wue.py  gee_tower_export_wue_one_year.py  ingest_appeears_modis_qa_zip.py  install_and_try_ameriflux_one_site.R  merge_full_matrix_from_point_files.py  phase11_geographic_hotspot_threshold_scan.py  phase13_spatial_regime_ecosystem_response_paper.py  phase18_grassland_spatial_trait_lock.py  phase2_test_no_universal_threshold.py  phase4_merge_traits_environment.py  phase4_merge_traits_environment_FIXED.py  phase4_merge_traits_environment_FIXED.py.before_stack_fix  phase6_robustness_phase7_interpretation_BEFORE_FAST_QUEUE_PATCH.py  phase8_latent_product_adjusted_response_BEFORE_NBOOT50_PATCH.py  phase8_latent_product_adjusted_response_BEFORE_READONLY_PATCH.py  project_final_nature_analysis_3x3.py  project_final_nature_analysis_BOOT200.py  project_final_nature_analysis_BOOT50.py  project_final_nature_postprocess_3x3.py  requirements_01_30.sh  (+78 more)
(+258 files in other folders)
